--- a/HatWindows/starship.toml
+++ b/HatWindows/starship.toml
@@ -1,116 +1,139 @@
-# ---- Global ----
+format = """\
+($directory)\
+$os\
+$git_branch\
+$fill\
+$nodejs\
+$rust\
+$golang\
+$php\
+$bun\
+$java\
+$c\
+$conda\
+$zig\
+$cmd_duration\
+$time\
+\n$character\
+"""
+
 add_newline = true
-command_timeout = 2000      # cuánto esperar a cada módulo (ms)
-scan_timeout = 35           # detección de archivos/carpetas (ms)
+command_timeout = 2000
 palette = "kanagawa_dragon"
 
-# Línea izquierda
-format = """
-$directory$git_branch$git_status
-$character"""
+[fill]
+symbol = " "   # sin puntos
 
-# Línea derecha (verdadero prompt derecho)
-right_format = "$nodejs$rust$golang$php$bun$java$c$conda$zig$cmd_duration$time"
-
-# ---- Paleta ----
+# --------- Kanagawa Dragon ---------
 [palettes.kanagawa_dragon]
-directory = "#DCD7BA"
-git       = "#957FB8"
-nodejs    = "#98BB6C"
-rust      = "#FF5D62"
-golang    = "#7FB4CA"
-php       = "#E6C384"
-bun       = "#DCD7BA"
-java      = "#FF5D62"
-c         = "#7FB4CA"
-conda     = "#7AA89F"
-zig       = "#FFA066"
-duration  = "#E6C384"
-time      = "#7AA89F"
-text      = "#DCD7BA"
-error     = "#C34043"
+text      = "#DCD7BA"  # fujiWhite
+subtext0  = "#C8C093"  # oldWhite (suave)
+blue      = "#7E9CD8"  # crystalBlue
+mauve     = "#957FB8"  # oniViolet
+pink      = "#D27E99"  # sakuraPink
+teal      = "#7AA89F"  # waveAqua2
+aqua      = "#7FB4CA"  # springBlue (por si lo querés usar)
+green     = "#98BB6C"  # springGreen
+red       = "#C34043"  # autumnRed
+yellow    = "#FF9E3B"  # autumnYellow
+orange    = "#FFA066"  # surimiOrange
+peach     = "#E6C384"  # carpYellow (dorado cálido)
+timecol   = "#7AA89F" 
 
-# ---- Prompt char ----
+# --------- PROMPT / USER / DIR ---------
 [character]
-success_symbol = "[ރ](bold fg:text) "
-error_symbol   = "[ރ](bold fg:error) "
+success_symbol = "[ރ](fg:text)"
+error_symbol   = "[ރ](fg:red)"
 
-# ---- Usuario (siempre visible) ----
 [username]
-style_user = "bold fg:text"
-style_root = "bold fg:error"
-format = "[ރ user]($style)@"
+style_user = "bold text"
+style_root = "bold red"
+format = "[$user]($style) "
+disabled = false
 show_always = true
 
-# ---- Directorio ----
 [directory]
-format = "[$path]($style)[$read_only]($read_only_style) "
-style = "fg:directory"
-read_only_style = "fg:error"
+format = "[$path](bold $style)[$read_only]($read_only_style) "
 truncation_length = 2
+style = "bold fg:mauve"
+read_only_style = "fg:peach"
+before_repo_root_style = "fg:blue"
 truncation_symbol = "…/"
-read_only = "  "
+truncate_to_repo = true
+read_only = "  "
+
 [directory.substitutions]
 "Documents" = "󰈙 "
 "Downloads" = " "
 "Music"     = " "
 "Pictures"  = " "
 
-# ---- Duración y hora (van a la derecha) ----
+# --------- TIEMPO / DURACIÓN ---------
 [cmd_duration]
+format = " took [ $duration]($style) "
+style = "bold fg:peach"
 min_time = 500
-style = "bold fg:duration"
-format = " took [ $duration]($style) "
 
 [time]
 disabled = false
 time_format = "%R"
-format = "[  $time ](fg:time)"
+format = "[$time](fg:timecol)"
 
-# ---- Git ----
+# --------- GIT ---------
 [git_branch]
-style = "bold fg:git"
-format = "[ $branch]($style) "
+format = "-> [$symbol$branch]($style) "
+style = "bold fg:mauve"
+symbol = " "
 
 [git_status]
-format = "[$all_status$ahead_behind ](fg:text)"
+format = "[$all_status$ahead_behind ]($style)"
+style = "fg:text bg:pink"
 
-# ---- Runtimes (se muestran sólo si aplica) ----
-[nodejs]
-symbol = ""
-format = "[ $symbol ($version) ](fg:nodejs)"
-
-[rust]
-symbol = ""
-format = "[ $symbol ($version) ](fg:rust)"
-
-[golang]
-symbol = ""
-format = "[ $symbol ($version) ](fg:golang)"
-
-[php]
-symbol = ""
-format = "[ $symbol ($version) ](fg:php)"
-
-[bun]
-symbol = ""
-format = "[ $symbol ($version) ](fg:bun)"
+# --------- RUNTIMES (muestran solo cuando aplica) ---------
+[python]
+disabled = false
+format = "[$symbol$pyenv_prefix($version)( $virtualenv)](fg:peach)"
+symbol = " "
+version_format = "$raw"
 
 [java]
-symbol = ""
-format = "[ $symbol ($version) ](fg:java)"
+format = "[ $symbol ($version) ](fg:red)"
+version_format = "$raw"
+symbol = " "
+disabled = false
 
 [c]
-symbol = ""
-format = "[ $symbol ($version) ](fg:c)"
-
-[conda]
-symbol = ""
-format = "[ $symbol $environment ](fg:conda)"
+format = "[ $symbol ($version) ](fg:blue)"
+symbol = " "
+version_format = "$raw"
+disabled = false
 
 [zig]
-symbol = ""
-format = "[ $symbol ($version) ](fg:zig)"
+format = "[ $symbol ($version) ](fg:orange)"
+version_format = "$raw"
+disabled = false
+
+[bun]
+version_format = "$raw"
+format = "[ $symbol ($version) ](fg:text)"
+disabled = false
+
+[nodejs]
+symbol = ""
+format = "[ $symbol ($version) ](fg:green)"
+
+[rust]
+symbol = ""
+format = "[ $symbol ($version) ](fg:red)"
+
+[golang]
+symbol = ""
+format = "[ $symbol ($version) ](fg:teal)"
+
+[php]
+symbol = ""
+format = "[ $symbol ($version) ](fg:peach)"
 
 [docker_context]
 disabled = true
+symbol = " "
