--- a/HatArch/DenAsari/hypr/bind.conf
+++ b/HatArch/DenAsari/hypr/bind.conf
@@ -43,10 +43,8 @@ bind = $mainMod SHIFT, J, swapwindow, d
 
 #ScreenShotiing 
 
-# Fullscreen screenshot
-bind = SUPER, F2, exec, grim ~/Pictures/screenshot-$(date +%s).png
-# Region screenshot with annotation
-bind = SUPER_SHIFT, F2, exec, grim -g "$(slurp)" - | swappy -f -
+bind = SUPER ALT, S, exec, grim ~/Pictures/Screenshots/screen-$(date +%s).png
+bind = SUPER SHIFT, S, exec, sh -c 'grim -g "$(slurp)" - | swappy -f -'
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -73,7 +71,7 @@ bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod CTRL, S, movetoworkspace, special:magic<C-D-S>
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
