--- a/HatLinux/HatGhostty/config
+++ b/HatLinux/HatGhostty/config
@@ -7,7 +7,7 @@ font-family = "IosevkaTerm Nerd Font Mono"
 font-size = 20
 window-padding-x = 0
 window-padding-y = 0
-background-opacity = 0.85
+background-opacity = 0.80
 window-decoration = none
 
 # --- Kanagawa Dragon-ish ---
@@ -35,14 +35,14 @@ palette = 15=#DCD7BA
 
 # --- Keybinds (OJO: sin espacios en el segundo '=') ---
 # Splits: abajo (vertical) y derecha (horizontal)
-keybind = alt+-=new_split:down
-keybind = alt+shift+equal=new_split:right
+#keybind = alt+-=new_split:down
+#keybind = alt+shift+equal=new_split:right
 
 # Mover el foco entre splits
-keybind = alt+shift+left=goto_split:left
-keybind = alt+shift+right=goto_split:right
-keybind = alt+shift+up=goto_split:up
-keybind = alt+shift+down=goto_split:down
+#keybind = alt+shift+left=goto_split:left
+#keybind = alt+shift+right=goto_split:right
+#keybind = alt+shift+up=goto_split:up
+#keybind = alt+shift+down=goto_split:down
 
 # Zoom del split actual
 keybind = alt+z=toggle_split_zoom
