--- a/HatArch/themes/DenAsari/hypr/input.conf
+++ b/HatArch/themes/DenAsari/hypr/input.conf
@@ -4,7 +4,7 @@
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us, latam
     kb_variant =
     kb_model =
     kb_options =
