--- a/HatArch/themes/Mocha-Power/wofi/config
+++ b/HatArch/themes/Mocha-Power/wofi/config
@@ -5,11 +5,11 @@ no_actions=true
 line_wrap=word
 show-icons=true
 width=550
-height=335
+height=100
 allow_images=true
 always_parse_args=true
 show_all=false
-term=kitty
+term=ghostty
 insensitive=true
 print_command=true
 gtk_dark=false
