add a python in nvim and modified wofi

--- a/HatArch/themes/Mocha-Power/wofi/config
+++ b/HatArch/themes/Mocha-Power/wofi/config
@@ -1,15 +1,16 @@
-hide_scroll=true
-prompt=Launch
+hide_scroll=false
+prompt="Apps"
 normal_window=true
-no_actions=true
+no_actions=false
 line_wrap=word
 show-icons=true
-width=550
-height=100
+width=600
+height=400
 allow_images=true
 always_parse_args=true
-show_all=false
+show_all=true
 term=ghostty
-insensitive=true
-print_command=true
-gtk_dark=false
+insensitive=false
+print_command=false
+gtk_dark=true
+cache_file=/home/hat/.cache/wofi-run
