--- a/HatArch/themes/Mocha-Power/hypr/startup.conf
+++ b/HatArch/themes/Mocha-Power/hypr/startup.conf
@@ -14,8 +14,7 @@ exec-once = wl-paste --watch cliphist store &
 exec-once = hypridle
 # exec-once = hyprlock
 exec-once = swww-daemon
-exec-once = ~/.config/waybar/scripts/theme-switcher.sh restore
+# exec-once = ~/.config/waybar/scripts/theme-switcher.sh restore
 exec-once = waybar
 exec-once = blueman-applet
-exec-once = swww-daemon
 exec-once = wallpaper-apply random
